# Haskell-Neural-Network-Back-Propagation

./: README.md  backprop.lkshs  backprop.lkshw  leksah-neural.cabal
src/: GUI.hs  Main.hs  NetTest.hs  NetTest.hs~  NeuralNetwork.hs  RandMatrix.hs
